--- a/style.css
+++ b/style.css
@@ -1,18 +1,33 @@
-.heading
+body
+{
+  background-size: cover;	
+}.heading
 {
   font-size: 23px;
   width: 100%;
   margin: 0px;
+  background:linear-gradient(red, yellow);
+  color:white;
+  font-family: cursive;
 }
 .note
 {
-  font-size: 15px;
+  font-size: 13px;
   color: black;
+  font-family: serif;
 }
-body
-{
-  background-size: cover;	
+.btn{
+    width:100px;
+    height: 35px;
+    border-radius: 10px;
+    padding: 5px;
+    border: none;
+    background-color:rgb(228, 108, 9);
+    font-size: 23px;
+    font-family: serif;
+    font-weight: bold;
 }
+
   .div_speed
   {
   	float: left;
